--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body * {
-  font-family: 'Dosis';
-  background-color: #FFCCB3;
+  font-family: "Dosis";
+  background-color: #ffccb3;
 }
 
 input {
@@ -88,5 +88,26 @@ input {
 }
 .gameBtn:hover {
   background-color: white;
-  color: #FFCCB3;
+  color: #ffccb3;
+}
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.popup\_inner {
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  margin: auto;
+  border-radius: 20px;
+  background: white;
 }
