Improve game page styling

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,13 @@ html, body, #root, #root>div {
   justify-items: center;
 }
 
+.gameContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
 input {
   background-color: white;
   border-radius: 10%;
